--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Kolekcja Broni</title>
-    <style>
+<style>
         body { margin: 0; padding: 0; background-color: #f5f5f0; font-family: 'Segoe UI', sans-serif; color: #33322e; }
         header { display: flex; justify-content: center; align-items: center; height: 80px; border-bottom: 1px solid #d1d1ca; background: #f5f5f0; position: sticky; top: 0; z-index: 100; }
         h1 { font-size: 1.6rem; font-weight: 400; text-transform: uppercase; letter-spacing: 4px; margin: 0; }
@@ -27,7 +27,26 @@
         .modal-gallery { display: flex; gap: 15px; overflow-x: auto; padding-bottom: 15px; margin-bottom: 20px; }
         .modal-gallery img { height: 350px; border-radius: 4px; flex-shrink: 0; cursor: pointer; }
         .modal-full-desc { line-height: 1.8; color: #444; white-space: pre-wrap; }
-    </style>
+
+/* Styl dla Lightboxa */
+#lightbox-overlay {
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.95);
+    display: none;
+    z-index: 3000;
+    justify-content: center;
+    align-items: center;
+    cursor: zoom-out;
+}
+#lightbox-img {
+    max-width: 95%;
+    max-height: 95%;
+    box-shadow: 0 0 30px rgba(0,0,0,0.5);
+    border: 2px solid #444;
+}
+
+</style>
 </head>
 <body>
 
@@ -49,6 +68,11 @@
         <button class="close-btn" onclick="closeModal()">&times;</button>
         <div id="modal-body"></div>
     </div>
+</div>
+
+
+<div id="lightbox-overlay" onclick="closeLightbox()">
+    <img id="lightbox-img" src="" alt="Powiększenie">
 </div>
 
 <script>
@@ -114,8 +138,8 @@
     window.openModal = function(index) {
         const item = allData[index];
         const body = document.getElementById('modal-body');
-        let imgsHtml = item.zdjecia.map(img => `<img src="${img}" onclick="window.open('${img}', '_blank')">`).join('');
-        
+        let imgsHtml = item.zdjecia.map(img => `<img src="${img}" onclick="openLightbox('${img}')" title="Kliknij, aby powiększyć">`).join('');
+
         body.innerHTML = `
             <div class="modal-gallery">${imgsHtml}</div>
             <div class="modal-info">
@@ -163,6 +187,18 @@
     // Używamy GID 1129470117 zgodnie z Twoim linkiem
     script.src = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=responseHandler:handleData&gid=1129470117`;
     document.body.appendChild(script);
+
+window.openLightbox = function(src) {
+    const lb = document.getElementById('lightbox-overlay');
+    const lbImg = document.getElementById('lightbox-img');
+    lbImg.src = src;
+    lb.style.display = 'flex';
+};
+
+window.closeLightbox = function() {
+    document.getElementById('lightbox-overlay').style.display = 'none';
+};
+
 </script>
 
 </body>
