--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Kolekcja Broni</title>
     <style>
-        body { margin: 0; background-color: #f5f5f0; font-family: 'Segoe UI', sans-serif; color: #333; }
-        header { background: #fff; padding: 15px 0; text-align: center; border-bottom: 1px solid #ccc; position: sticky; top: 0; z-index: 100; }
+        body { margin: 0; background-color: #f5f5f0; font-family: 'Segoe UI', sans-serif; color: #33322e; }
+        header { background: #fff; padding: 15px 0; text-align: center; border-bottom: 1px solid #f5f5f0; position: sticky; top: 0; z-index: 100; }
         
         .tools { 
             max-width: 1400px; 
@@ -294,4 +294,5 @@ window.closeL = function() {
 </script>
 </body>
 </html>
+
 
