--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Kolekcja Broni</title>
     <style>
@@ -294,6 +295,7 @@ window.closeL = function() {
 </script>
 </body>
 </html>
+
 
 
 
