--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <option value="">Wszystkie kraje</option>
         </select>
         <select id="age-filter" class="filter-select" onchange="filterData()">
-            <option value="">Wszystkie wieki</option>
+            <option value="">Wszystkie lata</option>
         </select>
         <input type="text" id="search-bar" placeholder="Szukaj..." oninput="filterData()">
     </div>
@@ -271,5 +271,6 @@
 </script>
 </body>
 </html>
+
 
 
