--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 
 <script>
-    let allItems = [];
+let allItems = [];
     let currentPhotos = [];
     let currentIdx = 0;
 
@@ -148,6 +148,7 @@
 
     // Preloading następnego zdjęcia
     function preloadNext(idx) {
+        if (!currentPhotos.length) return;
         const nextIdx = (idx + 1) % currentPhotos.length;
         const img = new Image();
         img.src = getUrl(currentPhotos[nextIdx], getSmartSize());
@@ -184,6 +185,7 @@
 
         const fill = (id, data) => {
             const el = document.getElementById(id);
+            if (!el) return;
             el.innerHTML = `<option value="">${el.options[0].text}</option>`;
             data.forEach(val => {
                 if(val) el.innerHTML += `<option value="${val}">${val}</option>`;
@@ -229,7 +231,7 @@
         const item = allItems[i];
         currentPhotos = item.zdjecia;
         let thumbs = item.zdjecia.map((id, idx) => 
-            `<img src="${getUrl(id, 'w400')}" onclick="openLightbox(${idx}, event)">`
+            `<img src="${getUrl(id, 'w200')}" onclick="openLightbox(${idx}, event)">`
         ).join('');
 
         document.getElementById('m-body').innerHTML = `
@@ -269,7 +271,7 @@
         document.getElementById('lightbox-overlay').style.display = 'none';
     };
 
-    // Zoom logic
+    // Zoom & Swipe logic
     const lbImg = document.getElementById('lightbox-img');
     const lbOverlay = document.getElementById('lightbox-overlay');
 
@@ -289,42 +291,31 @@
 
     lbOverlay.addEventListener('mousemove', updateZoomOrigin);
 
+    // --- SWIPE ---
+    let touchStartX = 0;
+    let touchEndX = 0;
+
+    lbOverlay.addEventListener('touchstart', e => {
+        touchStartX = e.changedTouches[0].screenX;
+    }, {passive: true});
+
+    lbOverlay.addEventListener('touchend', e => {
+        touchEndX = e.changedTouches[0].screenX;
+        handleSwipe();
+    }, {passive: true});
+
+    function handleSwipe() {
+        const swipeThreshold = 50;
+        if (lbImg.classList.contains('zoomed')) return;
+        if (touchEndX < touchStartX - swipeThreshold) move(1);
+        if (touchEndX > touchStartX + swipeThreshold) move(-1);
+    }
+
+    // Google Sheets Data
     const s = document.createElement('script');
     s.src = "https://docs.google.com/spreadsheets/d/1EJYBKJowcGvMT8_Dh6bxnY0swD85dW1SO50_c9jTTa4/gviz/tq?tqx=responseHandler:handleData&gid=1129470117";
     document.body.appendChild(s);
-
-// --- OBSŁUGA SWIPE DLA LIGHTBOXA ---
-let touchStartX = 0;
-let touchEndX = 0;
-
-const lbOverlay = document.getElementById('lightbox-overlay');
-
-lbOverlay.addEventListener('touchstart', e => {
-    touchStartX = e.changedTouches[0].screenX;
-}, {passive: true});
-
-lbOverlay.addEventListener('touchend', e => {
-    touchEndX = e.changedTouches[0].screenX;
-    handleSwipe();
-}, {passive: true});
-
-function handleSwipe() {
-    const swipeThreshold = 50; // czułość: ile pikseli trzeba przesunąć, by zadziałało
     
-    // Nie zmieniaj zdjęcia, jeśli jest włączony zoom
-    const img = document.getElementById('lightbox-img');
-    if (img.classList.contains('zoomed')) return;
-
-    if (touchEndX < touchStartX - swipeThreshold) {
-        // Przesunięcie w lewo -> Następne zdjęcie
-        move(1);
-    }
-    if (touchEndX > touchStartX + swipeThreshold) {
-        // Przesunięcie w prawo -> Poprzednie zdjęcie
-        move(-1);
-    }
-}
-
 </script>
 </body>
 </html>
