--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja Kolekcja Broni</title>
+    <title>Moja Kolekcja Broni new</title>
     <style>
         body { margin: 0; background-color: #f5f5f0; font-family: 'Segoe UI', sans-serif; color: #333; }
         
@@ -328,6 +328,7 @@ let allItems = [];
 </script>
 </body>
 </html>
+
 
 
 
