--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja Kolekcja Broni new</title>
+    <title>Moja Kolekcja Broni</title>
     <style>
         body { margin: 0; background-color: #f5f5f0; font-family: 'Segoe UI', sans-serif; color: #333; }
         
@@ -100,7 +100,7 @@
 <body>
 
 <header>
-    <h1>Moja Kolekcja Broni</h1>
+    <h1>Moja Kolekcja Broni new</h1>
     <div class="tools">
         <select id="type-filter" class="filter-select" onchange="filterData()">
             <option value="">Wszystkie typy</option>
@@ -328,6 +328,7 @@ let allItems = [];
 </script>
 </body>
 </html>
+
 
 
 
