--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
 
 <header>
-    <h1>Moja Kolekcja Broni new</h1>
+    <h1>Moja Kolekcja Broni new2</h1>
     <div class="tools">
         <select id="type-filter" class="filter-select" onchange="filterData()">
             <option value="">Wszystkie typy</option>
@@ -357,6 +357,7 @@ let allItems = [];
 </script>
 </body>
 </html>
+
 
 
 
