--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     transition: transform 0.3s ease; 
     cursor: zoom-in;
     transform-origin: center;
-    /* pointer-events: none; <-- USUŃ TO */
-    touch-action: pinch-zoom; /* Pozwala na rozciąganie palcami */
+    pointer-events: auto; /* MUSI BYĆ AUTO: żeby obrazek "czuł" kliknięcie i pinch-zoom */
+    touch-action: pinch-zoom; /* Pozwala systemowi na rozciąganie palcami */
     z-index: 2050;
 }
 
@@ -300,54 +300,56 @@ let allItems = [];
     };
 
 // --- Logika Zoom & Swipe ---
-  const lbImg = document.getElementById('lightbox-img');
-  const lbOverlay = document.getElementById('lightbox-overlay');
+const lbImg = document.getElementById('lightbox-img');
+const lbOverlay = document.getElementById('lightbox-overlay');
 
-  if (lbImg && lbOverlay) {
-      // Obsługa Swipe (Dotyk)
-      let touchStartX = 0;
-      let touchEndX = 0;
+if (lbImg && lbOverlay) {
+    let touchStartX = 0;
+    let touchEndX = 0;
 
-      lbOverlay.addEventListener('touchstart', e => {
-          if (e.touches.length > 1) { touchStartX = 0; return; } // Ignoruj jeśli 2 palce (rozciąganie)
-          touchStartX = e.changedTouches[0].screenX;
-      }, {passive: true});
-
-      lbOverlay.addEventListener('touchend', e => {
-          if (touchStartX === 0) return;
-          touchEndX = e.changedTouches[0].screenX;
-          const swipeThreshold = 50;
-          if (!lbImg.classList.contains('zoomed')) {
-              if (touchEndX < touchStartX - swipeThreshold) window.move(1);
-              if (touchEndX > touchStartX + swipeThreshold) window.move(-1);
-          }
-      }, {passive: true});
-
-      // Obsługa Kliknięcia/Zoomu na całym tle
-      lbOverlay.addEventListener('click', function(e) {
-          // Jeśli kliknięto w strzałkę lub przycisk zamknięcia - nie rób zoomu
-          if (e.target.classList.contains('nav') || e.target.classList.contains('lb-close')) return;
-          
-          lbImg.classList.toggle('zoomed');
-          if (lbImg.classList.contains('zoomed')) {
-              // Oblicz punkt zoomu względem kliknięcia
-              const x = (e.clientX / window.innerWidth) * 100;
-              const y = (e.clientY / window.innerHeight) * 100;
-              lbImg.style.transformOrigin = `${x}% ${y}%`;
-          }
-      });
-
-      lbOverlay.addEventListener('mousemove', updateZoomOrigin);
-  }
-
-    function updateZoomOrigin(e) {
-        const img = document.getElementById('lightbox-img');
-        if (img && img.classList.contains('zoomed')) {
-            const x = (e.clientX / window.innerWidth) * 100;
-            const y = (e.clientY / window.innerHeight) * 100;
-            img.style.transformOrigin = `${x}% ${y}%`;
+    // 1. SWIPE (na overlayu)
+    lbOverlay.addEventListener('touchstart', e => {
+        // Jeśli dotykasz dwoma palcami, nie inicjuj swipe (pozwól na pinch-zoom)
+        if (e.touches.length > 1) {
+            touchStartX = 0;
+            return;
         }
-    }
+        touchStartX = e.changedTouches[0].screenX;
+    }, {passive: true});
+
+    lbOverlay.addEventListener('touchend', e => {
+        if (touchStartX === 0) return;
+        touchEndX = e.changedTouches[0].screenX;
+        const swipeThreshold = 50;
+        
+        // Przesuwaj tylko gdy nie ma zoomu
+        if (!lbImg.classList.contains('zoomed')) {
+            if (touchEndX < touchStartX - swipeThreshold) window.move(1);
+            else if (touchEndX > touchStartX + swipeThreshold) window.move(-1);
+        }
+    }, {passive: true});
+
+    // 2. ZOOM NA KLIK (bezpośrednio na obrazku)
+    lbImg.addEventListener('click', function(e) {
+        e.stopPropagation(); // Ważne: żeby klik w foto nie zamykał lightboxa
+        this.classList.toggle('zoomed');
+        if (this.classList.contains('zoomed')) {
+            updateZoomOrigin(e);
+        }
+    });
+
+    // 3. ZOOM NA PC (ruch myszką)
+    lbOverlay.addEventListener('mousemove', e => {
+        if (lbImg.classList.contains('zoomed')) updateZoomOrigin(e);
+    });
+}
+
+function updateZoomOrigin(e) {
+    const img = document.getElementById('lightbox-img');
+    const x = (e.clientX / window.innerWidth) * 100;
+    const y = (e.clientY / window.innerHeight) * 100;
+    img.style.transformOrigin = `${x}% ${y}%`;
+}
 
     // Google Sheets Data
     const s = document.createElement('script');
@@ -357,6 +359,7 @@ let allItems = [];
 </script>
 </body>
 </html>
+
 
 
 
