--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Moja Kolekcja Broni</title>
+    <link rel="icon" type="image/png" href="./miecz1.png">
     <style>
         :root {
             --bg-color: #f5f5f0;
@@ -309,4 +310,5 @@
 </script>
 </body>
 </html>
+
 
