--- a/index.html
+++ b/index.html
@@ -108,4 +108,259 @@
         #lightbox-img.zoomed ~ .nav, 
         #lightbox-img.zoomed ~ #lb-pagination { opacity: 0; pointer-events: none; }
 
-        .close-btn { position: absolute; top: 15
+        .close-btn { position: absolute; top: 15px; right: 25px; font-size: 40px; cursor: pointer; color: #888; }
+
+        @media (max-width: 800px) {
+            .tools { flex-direction: column; gap: 8px; padding: 5px 15px; }
+            .filter-select, #search-bar { width: 100%; flex: 1 0 auto; font-size: 14px; padding: 8px 10px; height: 40px; }
+            .container { grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 12px; padding: 10px; }
+            #modal-content { padding: 15px; width: 95%; max-height: 95vh; }
+            .modal-gallery img { height: 80px; }
+            .nav { display: none; } /* Na mobile używamy tylko swipe */
+            #lb-pagination { bottom: 20px; }
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Moja Kolekcja Broni</h1>
+    <div class="tools">
+        <select id="type-filter" class="filter-select" onchange="filterData()"><option value="">Wszystkie typy</option></select>
+        <select id="country-filter" class="filter-select" onchange="filterData()"><option value="">Wszystkie kraje</option></select>
+        <select id="age-filter" class="filter-select" onchange="filterData()"><option value="">Wszystkie lata</option></select>
+        <input type="text" id="search-bar" placeholder="Szukaj w opisie lub nazwie..." oninput="filterData()">
+    </div>
+</header>
+
+<div class="container" id="gallery">Ładowanie kolekcji...</div>
+
+<div id="modal-overlay" onclick="closeM()">
+    <div id="modal-content" onclick="event.stopPropagation()">
+        <span class="close-btn" onclick="closeM()">&times;</span>
+        <div id="m-body"></div>
+    </div>
+</div>
+
+<div id="lightbox-overlay" onclick="closeL()">
+    <span class="lb-close" onclick="closeL()">&times;</span>
+    <div class="nav" style="left:10px" onclick="move(-1, event)">&#10094;</div>
+    <img id="lightbox-img" src="" alt="Powiększenie" onclick="event.stopPropagation()">
+    <div class="nav" style="right:10px" onclick="move(1, event)">&#10095;</div>
+    <div id="lb-pagination" onclick="event.stopPropagation()"></div>
+</div>
+
+<script>
+    let allItems = [];
+    let currentPhotos = [];
+    let currentIdx = 0;
+
+    const getUrl = (id, size = 'w800') => id ? `https://drive.google.com/thumbnail?id=${id.toString().trim()}&sz=${size}` : '';
+    const getSmartSize = () => window.innerWidth < 800 ? 'w800' : 'w4000';
+
+    function preloadNext(idx) {
+        if (!currentPhotos.length) return;
+        const nextIdx = (idx + 1) % currentPhotos.length;
+        const img = new Image();
+        img.src = getUrl(currentPhotos[nextIdx], getSmartSize());
+    }
+
+    window.handleData = function(resp) {
+        const rows = resp.table.rows;
+        allItems = rows.map(r => {
+            const c = r.c;
+            if (!c || !c[1]) return null;
+            let pics = [];
+            for (let i = 7; i < c.length; i++) {
+                if (c[i]?.v && c[i].v.length > 15) pics.push(c[i].v);
+            }
+            return {
+                nazwa: c[1]?.v || '', kraj: c[2]?.v || '', typ: c[3]?.v || '',
+                wiek: c[4]?.v || '', opisK: c[5]?.v || '', opisF: c[6]?.v || '', zdjecia: pics
+            };
+        }).filter(x => x && x.zdjecia.length > 0);
+        populateFilters();
+        renderGallery(allItems);
+    };
+
+    function populateFilters() {
+        const getUnique = (key) => [...new Set(allItems.map(i => i[key]))].sort();
+        const fill = (id, data) => {
+            const el = document.getElementById(id);
+            if (!el) return;
+            el.innerHTML = `<option value="">${el.options[0].text}</option>` + 
+                           data.map(v => v ? `<option value="${v}">${v}</option>` : '').join('');
+        };
+        fill('type-filter', getUnique('typ'));
+        fill('country-filter', getUnique('kraj'));
+        fill('age-filter', getUnique('wiek'));
+    }
+
+    function filterData() {
+        const s = document.getElementById('search-bar').value.toLowerCase();
+        const fType = document.getElementById('type-filter').value;
+        const fCountry = document.getElementById('country-filter').value;
+        const fAge = document.getElementById('age-filter').value;
+        const filtered = allItems.filter(i => {
+            const matchS = i.nazwa.toLowerCase().includes(s) || i.opisK.toLowerCase().includes(s);
+            return matchS && (!fType || i.typ === fType) && (!fCountry || i.kraj === fCountry) && (!fAge || i.wiek === fAge);
+        });
+        renderGallery(filtered);
+    }
+
+    function renderGallery(data) {
+        const gal = document.getElementById('gallery');
+        gal.innerHTML = data.map(item => {
+            const idx = allItems.indexOf(item);
+            return `
+            <div class="card" onclick="openModal(${idx})">
+                <img src="${getUrl(item.zdjecia[0], 'w600')}" loading="lazy" alt="${item.nazwa}">
+                <h3>${item.nazwa}</h3>
+                <div class="meta">${item.kraj} | ${item.wiek} | ${item.typ}</div>
+                <div class="short-desc">${item.opisK}</div>
+            </div>`;
+        }).join('') || "<p style='grid-column:1/-1;text-align:center;'>Brak wyników.</p>";
+    }
+
+    window.openModal = (i) => {
+        const item = allItems[i];
+        currentPhotos = item.zdjecia;
+        let thumbs = item.zdjecia.map((id, idx) => 
+            `<img src="${getUrl(id, 'w200')}" onclick="openLightbox(${idx}, event)" alt="miniaturka">`
+        ).join('');
+        document.getElementById('m-body').innerHTML = `
+            <div class="modal-gallery">${thumbs}</div>
+            <h2 style="margin:10px 0;">${item.nazwa}</h2>
+            <p style="color:#b2945e; font-weight:bold; margin-bottom:20px;">${item.kraj} | ${item.wiek} | ${item.typ}</p>
+            <div style="white-space:pre-wrap; line-height:1.7; color:#444;">${item.opisF}</div>
+        `;
+        document.getElementById('modal-overlay').style.display = 'flex';
+        document.body.style.overflow = 'hidden';
+    };
+
+    window.openLightbox = (idx, e) => {
+        if(e) e.stopPropagation();
+        currentIdx = idx;
+        const img = document.getElementById('lightbox-img');
+        img.classList.remove('zoomed');
+        img.style.transform = 'translateX(0)';
+        img.src = getUrl(currentPhotos[currentIdx], getSmartSize());
+        document.getElementById('lightbox-overlay').style.display = 'flex';
+        renderPagination();
+        preloadNext(currentIdx);
+    };
+
+    window.move = (step, e) => {
+        if(e) e.stopPropagation();
+        currentIdx = (currentIdx + step + currentPhotos.length) % currentPhotos.length;
+        updateLightboxImage();
+    };
+
+    window.goToPhoto = (idx) => {
+        currentIdx = idx;
+        updateLightboxImage();
+    };
+
+    function updateLightboxImage() {
+        const img = document.getElementById('lightbox-img');
+        img.classList.remove('zoomed');
+        img.style.opacity = '0';
+        setTimeout(() => {
+            img.src = getUrl(currentPhotos[currentIdx], getSmartSize());
+            img.style.transform = 'translateX(0)';
+            img.style.opacity = '1';
+            updatePagination();
+            preloadNext(currentIdx);
+        }, 150);
+    }
+
+    function renderPagination() {
+        const container = document.getElementById('lb-pagination');
+        if (currentPhotos.length <= 1) { container.innerHTML = ''; return; }
+        container.innerHTML = currentPhotos.map((_, i) => 
+            `<div class="dot ${i === currentIdx ? 'active' : ''}" onclick="goToPhoto(${i})"></div>`
+        ).join('');
+    }
+
+    function updatePagination() {
+        const dots = document.querySelectorAll('.dot');
+        dots.forEach((dot, i) => dot.classList.toggle('active', i === currentIdx));
+    }
+
+    window.closeM = () => { document.getElementById('modal-overlay').style.display = 'none'; document.body.style.overflow='auto'; };
+    window.closeL = () => {
+        document.getElementById('lightbox-img').classList.remove('zoomed');
+        document.getElementById('lightbox-overlay').style.display = 'none';
+    };
+
+    // --- LOGIKA SWIPE (TOUCH & MOUSE) ---
+    const lbImg = document.getElementById('lightbox-img');
+    const lbOverlay = document.getElementById('lightbox-overlay');
+    let startX = 0;
+    let isDown = false;
+
+    const startAction = (x) => {
+        if (lbImg.classList.contains('zoomed')) return;
+        startX = x;
+        isDown = true;
+        lbImg.style.transition = 'none';
+    };
+
+    const moveAction = (x) => {
+        if (!isDown || lbImg.classList.contains('zoomed')) return;
+        let diffX = x - startX;
+        lbImg.style.transform = `translateX(${diffX}px)`;
+        lbImg.style.opacity = 1 - Math.abs(diffX) / 800;
+    };
+
+    const endAction = (x) => {
+        if (!isDown) return;
+        isDown = false;
+        let diffX = x - startX;
+        lbImg.style.transition = 'transform 0.3s ease, opacity 0.3s ease';
+        if (Math.abs(diffX) > 100) {
+            window.move(diffX > 0 ? -1 : 1);
+        } else {
+            lbImg.style.transform = 'translateX(0)';
+            lbImg.style.opacity = '1';
+        }
+    };
+
+    lbOverlay.addEventListener('touchstart', e => startAction(e.touches[0].clientX), {passive: true});
+    lbOverlay.addEventListener('touchmove', e => moveAction(e.touches[0].clientX), {passive: true});
+    lbOverlay.addEventListener('touchend', e => endAction(e.changedTouches[0].clientX), {passive: true});
+
+    lbOverlay.addEventListener('mousedown', e => startAction(e.clientX));
+    window.addEventListener('mousemove', e => moveAction(e.clientX));
+    window.addEventListener('mouseup', e => endAction(e.clientX));
+
+    // Klawiatura
+    window.addEventListener('keydown', e => {
+        if (document.getElementById('lightbox-overlay').style.display === 'flex') {
+            if (e.key === 'ArrowLeft') window.move(-1);
+            if (e.key === 'ArrowRight') window.move(1);
+            if (e.key === 'Escape') closeL();
+        }
+    });
+
+    lbImg.addEventListener('click', e => {
+        e.stopPropagation();
+        lbImg.classList.toggle('zoomed');
+        if (lbImg.classList.contains('zoomed')) updateZoomOrigin(e);
+        else lbImg.style.transform = 'translateX(0)';
+    });
+
+    function updateZoomOrigin(e) {
+        const clientX = e.clientX || (e.touches ? e.touches[0].clientX : 0);
+        const clientY = e.clientY || (e.touches ? e.touches[0].clientY : 0);
+        const x = (clientX / window.innerWidth) * 100;
+        const y = (clientY / window.innerHeight) * 100;
+        lbImg.style.transformOrigin = `${x}% ${y}%`;
+    }
+
+    const s = document.createElement('script');
+    s.src = "https://docs.google.com/spreadsheets/d/1EJYBKJowcGvMT8_Dh6bxnY0swD85dW1SO50_c9jTTa4/gviz/tq?tqx=responseHandler:handleData&gid=1129470117";
+    document.body.appendChild(s);
+</script>
+</body>
+</html>
