--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         .modal-gallery { display: flex; gap: 12px; overflow-x: auto; padding-bottom: 15px; margin-bottom: 20px; border-bottom: 1px solid #eee; }
         .modal-gallery img { height: 120px; cursor: pointer; border: 2px solid #ddd; border-radius: 4px; }
 
-        #lightbox-overlay { background: #000; z-index: 2000; overflow: hidden; touch-action: none; }
+        #lightbox-overlay { background: #000; z-index: 2000; overflow: hidden; touch-action: pinch-zoom; }
         #lightbox-img { 
             max-width: 100%; max-height: 100%; object-fit: contain; 
             transition: transform 0.3s ease, opacity 0.3s ease;
@@ -260,7 +260,7 @@
         startX = e.touches[0].clientX;
         isMoving = true;
         lbImg.style.transition = 'none';
-    }, {passive: true});
+    }, {passive: false});
 
     lbOverlay.addEventListener('touchmove', e => {
         if (!isMoving || lbImg.classList.contains('zoomed')) return;
@@ -295,3 +295,4 @@
 </script>
 </body>
 </html>
+
