--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <link rel="icon" type="image/png" href="./miecz1.png">
     <title>Moja Kolekcja Broni</title><style>
     :root {
         --bg-color: #f5f5f0;
@@ -370,5 +371,6 @@
 </script>
 </body>
 </html>
+
 
 
